# lvglpp

./: .clang-format  .gitmodules  CMakeLists.txt  lv_conf.h  lv_conf_my.h
cmake/: build.cmake
core/: application.cc  application.h  event.cc  event.h  source_location.hpp
core/db/: AssetResDataBase.cpp  AssetResDataBase.h
core/log/: log.cpp  log.h
core/sys/: Activity.h  Application.cpp  Application.h  BaseActivity.cpp  BaseActivity.h  Event.cpp  Event.h  LinuxFramebufApplication.cpp  LinuxFramebufApplication.h  Navigators.cpp  Navigators.h  SdlSimulateApplication.cpp  SdlSimulateApplication.h  WaylandApplication.cpp  (+1 more)
demo/: CMakeLists.txt  SnapShot.cc  SnapShot.h  main.cc
demo/i18n_demo/: CMakeLists.txt  LangChange.cc  LangChange.h  LvTranslator.cc  LvTranslator.h  main.cc  session.cc  session.h
demo/i18n_demo/I18nWidgets/: InText.h
demo/i18n_demo/index/: index.html  remote.html
demo/i18n_demo/translations/: ar.yml  en-US.yml  ja.yml  lv_i18n.c  zh-CN.yml
demo/qrcode/: CMakeLists.txt  TestPage.cc  TestPage.h  main.cc
demo/remote_ctrl/: CMakeLists.txt  LangChange.cc  LangChange.h  LvTranslator.cc  LvTranslator.h  RemoteClient.cc  RemoteClient.h  main.cc  server.cc  session.cc  session.h
demo/remote_ctrl/I18nWidgets/: InText.cc
demo/remote_ctrl/index/: index.html  remote.html
demo/remote_ctrl/translations/: compile.sh  extrach.sh  ru-RU.yml
sdk/: CMakeLists.txt  lv_conf.h  lv_conf_my.h
sdk/core/db/: AssetResDataBase.cpp  AssetResDataBase.h
sdk/core/kernel/: Object.cc  Object.h
sdk/core/log/: log.cpp
sdk/core/sys/: Activity.h  Application.cpp  Application.h  BaseActivity.cpp  BaseActivity.h  DrmApplication.cpp  DrmApplication.h  Event.cpp  Event.h  LinuxFramebufApplication.cpp  LinuxFramebufApplication.h  Navigators.cpp  Navigators.h  SdlSimulateApplication.cpp  SdlSimulateApplication.h  Timer.cc  Timer.h  WaylandApplication.cpp  WaylandApplication.h  source_location.hpp
sdk/core/tools/: ImageManager.cpp  ImageManager.h  ImageManagerImpl.cpp  ImageManagerImpl.h  LvglUtils.cpp  LvglUtils.h  MemoryResManager.cpp  MemoryResManager.h  Utils.cpp  Utils.h  trTranslateImpl.cpp  trTranslateImpl.h
sdk/core/tools/fonts/: LvFontManager.cpp  LvFontManager.h  NotoSC_20_Bold.c  NotoSC_20_Normal.c  Noto_20_Bold.c  Noto_20_Normal.c  Noto_24_Bold.c  Noto_24_Normal.c  Noto_28_Bold.c  Noto_28_Normal.c  Noto_32_Bold.c  Noto_32_Normal.c  Noto_36_Bold.c  Noto_36_Normal.c  Noto_64_Bold.c
sdk/core/widgets/: Base64Image.cpp  Base64Image.h  BaseDialog.cpp  BaseDialog.h  BaseItem.cpp  BaseItem.h  BaseModel.hpp  Chart.cpp  Chart.h  CheckBox.cpp  CheckBox.h  Component.h  ConsumeText.cpp  ConsumeText.h  Delegate.hpp  DialogsEventManager.cpp  DialogsEventManager.h  GifImage.cpp  GifImage.h  GlobalVar.h  Image.cpp  Image.h  KeyboardArea.cc  KeyboardArea.h  ListView.hpp  ListViewDelegate.hpp  Loader.cpp  Loader.h  LvButton.cc  LvButton.h  LvText.cpp  LvText.h  MouseArea.cpp  MouseArea.h  PageIndicator.cpp  PageIndicator.h  PageView.hpp  PageViewDelegate.hpp  QrCode.cc  QrCode.h  (+14 more)
sdk/lvgl/: CMakeLists.txt
sdk/lvgl/env_support/cmake/: custom.cmake
sdk/lvgl/freetype-2.13.3/: Makefile
sdk/lvgl/freetype-2.13.3/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
sdk/lvgl/freetype-2.13.3/builds/amiga/: README  makefile  makefile.os4  smakefile
sdk/lvgl/freetype-2.13.3/builds/amiga/include/config/: ftconfig.h  ftmodule.h
sdk/lvgl/freetype-2.13.3/builds/amiga/src/base/: ftdebug.c  ftsystem.c
sdk/lvgl/freetype-2.13.3/builds/ansi/: ansi-def.mk  ansi.mk
sdk/lvgl/freetype-2.13.3/builds/beos/: beos-def.mk  beos.mk  detect.mk
sdk/lvgl/freetype-2.13.3/builds/cmake/: FindBrotliDec.cmake  iOS.cmake  testbuild.sh
sdk/lvgl/freetype-2.13.3/builds/compiler/: ansi-cc.mk  bcc-dev.mk  bcc.mk  emx.mk  gcc-dev.mk  gcc.mk  intelc.mk  unix-lcc.mk  visualage.mk  visualc.mk  watcom.mk  win-lcc.mk
sdk/lvgl/freetype-2.13.3/builds/dos/: detect.mk  dos-def.mk  dos-emx.mk  dos-gcc.mk  dos-wat.mk
sdk/lvgl/freetype-2.13.3/builds/mac/: ftmac.c
sdk/lvgl/freetype-2.13.3/builds/meson/: extract_freetype_version.py  extract_libtool_version.py  generate_reference_docs.py  parse_modules_cfg.py  process_ftoption_h.py
sdk/lvgl/freetype-2.13.3/builds/os2/: detect.mk  os2-def.mk  os2-dev.mk  os2-gcc.mk
sdk/lvgl/freetype-2.13.3/builds/symbian/: bld.inf  freetype.mmp
sdk/lvgl/freetype-2.13.3/builds/unix/: aclocal.m4  configure  configure.ac  configure.raw  detect.mk  freetype-config.in  freetype2.m4  ft-munmap.m4  ftconfig.h.in  ftsystem.c  install.mk  unix-cc.in  unix-def.in  unix-dev.mk  unix-lcc.mk  unix.mk  unixddef.mk
sdk/lvgl/freetype-2.13.3/builds/vms/: ftconfig.h  ftsystem.c
sdk/lvgl/freetype-2.13.3/builds/wince/: ftdebug.c
sdk/lvgl/freetype-2.13.3/builds/wince/vc2005-ce/: index.html
sdk/lvgl/freetype-2.13.3/builds/wince/vc2008-ce/: index.html
sdk/lvgl/freetype-2.13.3/builds/windows/: detect.mk  ftdebug.c  ftsystem.c  w32-bcc.mk  w32-bccd.mk  w32-dev.mk  w32-gcc.mk  w32-icc.mk  w32-intl.mk  w32-lcc.mk  w32-mingw32.mk  w32-vcc.mk  w32-wat.mk  win32-def.mk
sdk/lvgl/freetype-2.13.3/builds/windows/vc2010/: index.html
sdk/lvgl/freetype-2.13.3/builds/windows/visualc/: index.html
sdk/lvgl/freetype-2.13.3/builds/windows/visualce/: index.html
sdk/lvgl/src/drivers/display/fb/: lv_linux_fbdev.h
sdk/lvgl/src/drivers/wayland/: lv_wayland.c
sdk/lvgl/src/libs/lodepng/: lv_lodepng.c  lv_lodepng.h
sdk/net/: CMakeLists.txt
sdk/net/ws_gw/: CMakeLists.txt  msg_dispatcher.cpp  msg_dispatcher.h  net_pub_def.h  tcp_listener.cpp  tcp_listener.h  ws_gw.cpp  ws_gw.h  ws_session.cpp  ws_session.h
test/: BindDemo.cc  BindDemo.h  CMakeLists.txt  GameActivity.cc  GameActivity.h  GameStateDialog.cc  GameStateDialog.h  Home.cc  Home.h  home.cc  home.h  lvglpp_application.cc  lvglpp_application.h  main.cc  printer.c  printer.cc  printer.h  private.h  settings.c  settings.h  stats.c  stats.cc  stats.h  window_framebuf.h  window_wayland.h
test/assets/: font_ebike_trump_48.c  font_ebike_trump_72.c  font_gen.py
test/ws_client/: index.html
(+43 files in other folders)
